# sim-sandbox

./: .gitignore  README.md  demo_test.py  pyproject.toml
config/: default.yaml  sop_full_coverage.yaml
config/bot_adapters/: my_bot.yaml
docs/: architecture-agents-skills.md
personas/: default_distribution.yaml
scenarios/flight_booking/: 01_happy_path.yaml  02_slot_by_slot.yaml  03_batch_slots.yaml  04_ambiguous_input.yaml  05_user_changes_date.yaml  06_user_changes_dest.yaml  07_hidden_constraints.yaml  08_no_result_fallback.yaml  09_booking_failure.yaml  10_user_cancel.yaml  11_user_frustrated.yaml  12_off_topic.yaml  13_multi_change.yaml  14_adversarial_inject.yaml  SOP.md  basic_booking.yaml
skills/evaluation-judge/: SKILL.md
skills/evaluation-judge/references/: RUBRICS.md
skills/persona-generation/: SKILL.md
skills/persona-generation/references/: PERSONA-SCHEMA.md
skills/persona-validation/: SKILL.md
skills/scenario-adversarial/: SKILL.md
skills/scenario-creation/: SKILL.md
skills/scenario-creation/references/: EXAMPLE-SCENARIOS.md  SCENARIO-SCHEMA.md
skills/scenario-variation/: SKILL.md
skills/scenario-variation/assets/: variation-strategies.md
skills/turn-analysis/: SKILL.md
skills/user-simulation/: SKILL.md
skills/user-simulation/references/: COMMUNICATION-STYLES.md  EMOTIONAL-PATTERNS.md
src/sandbox/: __init__.py  cli.py  config.py
src/sandbox/adapters/: __init__.py  base.py  http_adapter.py  human_adapter.py  mock_adapter.py
tests/: test_evaluators.py  test_persona_generator.py  test_scenario_loader.py  test_simulator.py
(+29 files in other folders)
